--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mongoose": "^5.9.17",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0"
+    // "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "canvas": "^2.6.1"
