--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^2.9.3",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
