--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 ENV=development
+MONGODB_URI=mongodb+srv://ivana:dc4ZEBuSf6nW*JB@cluster0-s62u0.mongodb.net/<dbname>?retryWrites=true&w=majority
