--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "jsdom": "^16.2.2",
     "mongoose": "^5.9.17",
     "mongoose-currency": "^0.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "canvas": "^2.6.1"
